fixing background resize on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ main {
 body {
   overflow-y: scroll; /* Show vertical scrollbar */
   width: 100%;
-  min-height: 100vh;
+  height: 100%;
   margin: 0;
   font-weight: 500;
   line-height: 1.5;
